[gd_scene load_steps=6 format=3 uid="uid://2wm0f8ckxv6q"]

[ext_resource type="Script" uid="uid://c8ecp52wqofc3" path="res://main_menu/main_menu.gd" id="1_xgfpv"]
[ext_resource type="Theme" uid="uid://usdneyjl5qut" path="res://fonts/title_theme.tres" id="2_bsl24"]
[ext_resource type="PackedScene" uid="uid://cx2jfn1vbigx1" path="res://main_menu/settings/settings_menu.tscn" id="4_vh3sh"]
[ext_resource type="Theme" uid="uid://ce6cpfne6646l" path="res://fonts/body_theme.tres" id="6_i5klj"]

[sub_resource type="LabelSettings" id="LabelSettings_a3s81"]
font_size = 32

[node name="MainMenu" type="Node"]
script = ExtResource("1_xgfpv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 8.0
offset_right = 160.0
offset_bottom = 41.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_bsl24")
text = "This Is All There Is"
label_settings = SubResource("LabelSettings_a3s81")
horizontal_alignment = 1
justification_flags = 0

[node name="TopMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_i5klj")

[node name="TopMenuButtons" type="VBoxContainer" parent="CanvasLayer/TopMenu"]
layout_mode = 2
offset_left = 24.0
offset_top = 48.0
offset_right = 113.0
offset_bottom = 303.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="NewGameButton" type="Button" parent="CanvasLayer/TopMenu/TopMenuButtons"]
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" type="Button" parent="CanvasLayer/TopMenu/TopMenuButtons"]
layout_mode = 2
text = "Load Game"

[node name="JoinGameButton" type="Button" parent="CanvasLayer/TopMenu/TopMenuButtons"]
layout_mode = 2
text = "Join Game"

[node name="SettingsButton" type="Button" parent="CanvasLayer/TopMenu/TopMenuButtons"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="CanvasLayer/TopMenu/TopMenuButtons"]
layout_mode = 2
text = "Exit"

[node name="SubMenus" type="Control" parent="CanvasLayer/TopMenu"]
anchors_preset = 0
offset_left = 128.0
offset_top = 48.0
offset_right = 512.0
offset_bottom = 304.0

[node name="LoadGameMenu" type="Control" parent="CanvasLayer/TopMenu/SubMenus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/TopMenu/SubMenus/LoadGameMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "no"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JoinGameMenu" type="Control" parent="CanvasLayer/TopMenu/SubMenus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_i5klj")

[node name="Panel" type="Panel" parent="CanvasLayer/TopMenu/SubMenus/JoinGameMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TopMenu/SubMenus/JoinGameMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/TopMenu/SubMenus/JoinGameMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Game hosted on port 9999
Leave blank to join localhost"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TopMenu/SubMenus/JoinGameMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/TopMenu/SubMenus/JoinGameMenu/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "Enter IP Address"
alignment = 1

[node name="JoinButton" type="Button" parent="CanvasLayer/TopMenu/SubMenus/JoinGameMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="SettingsMenu" parent="CanvasLayer/TopMenu/SubMenus" instance=ExtResource("4_vh3sh")]
visible = false
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0
theme = ExtResource("6_i5klj")

[connection signal="pressed" from="CanvasLayer/TopMenu/TopMenuButtons/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TopMenu/TopMenuButtons/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TopMenu/TopMenuButtons/JoinGameButton" to="." method="_on_join_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TopMenu/TopMenuButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TopMenu/TopMenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TopMenu/SubMenus/JoinGameMenu/Panel/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
